# jxl-rs

./: .gitignore  AUTHORS  CONTRIBUTING.md  Cargo.toml  README.md  TEST_FAILURE_ANALYSIS.md  TEST_FAILURE_ROOT_CAUSE.md  bench_output.txt  make_all_tex.sh
jxl/: Cargo.toml
jxl/benches/: blending.rs  dct.rs
jxl/examples/: gain_map_info.rs
jxl/fuzz/: Cargo.toml
jxl/fuzz/fuzz_targets/: decode.rs  decode_header.rs
jxl/resources/fuzz_regression/: issue_525710098_many_empty_frames.jxl
jxl/resources/issues/: issue_783_flush_pixels_panic.jxl
jxl/resources/test/: GrayscalePatchesVarDCT.jxl  all.html  animated_ooo_jxlp.jxl  candle.jxl  candle_license.txt  efb.jxl  extra_channels.jxl  gray_alpha_lossless.jxl  grayscale_patches_modular.jxl  has_permutation_with_container.jxl  issue728_minimal.jxl  issue728_synthetic.jxl  issue772_blendbug.jxl  large_header.jxl  lossy_with_icc.jxl  multiple_layers_noise_spline.jxl  multiple_lf_420.jxl  named_frame_test.jxl  oddsize_ups.jxl  orientation2_flip_horizontal.jxl  orientation3_rotate_180.jxl  orientation4_flip_vertical.jxl  orientation5_transpose.jxl  orientation7_anti_transpose.jxl  patch_y_out_of_bounds.jxl  small_grayscale_patches_modular.jxl  squeeze_alpha.jxl  squeeze_edge.jxl  squeeze_empty_residual.jxl  stp2_520x260_d25_e6.jxl  strategic_solid_blue.jxl  tirr_photo.jxl  tree_max_property_20.jxl  upsampled_alpha.jxl  with_preview.jxl
jxl/resources/test/conformance_test_images/: animation_icos4d_5.jxl  bench_oriented_brg_5.jxl  bicycles.jxl  blendmodes_5.jxl  delta_palette.jxl  grayscale.jxl  grayscale_jpeg_5.jxl  grayscale_public_university.jxl  lossless_pfm.jxl  lz77_flower.jxl  noise.jxl  opsin_inverse.jxl  patches_lossless.jxl  progressive.jxl  spot.jxl  upsampling_5.jxl
jxl/resources/test/jpeg/: libjpeg_gradient_32x32.pnm  libjpeg_grayscale_8x8.pnm  libjpeg_progressive_8x8.pnm  libjpeg_restart_8x8.pnm  libjpeg_rgb_8x8.pnm  libjpeg_subsampled_420.pnm  libjpeg_subsampled_422.pnm  libjpeg_subsampled_444.pnm  libjpeg_testorig12.ppm  libjpeg_testorig_gray_scale_1_2.pgm
jxl/resources/test/metadata_test_images/: all_metadata.jxl  all_metadata_brob.jxl  large_exif.jxl  mixed_compression.jxl  multi_exif.jxl  multi_exif_brob.jxl  multi_jumbf.jxl  multi_xmp.jxl  single_exif.jxl  single_exif_brob.jxl  single_jumbf.jxl  single_jumbf_brob.jxl  single_xmp.jxl  single_xmp_brob.jxl
jxl/src/: api.rs  bit_reader.rs  bmff.rs  decode.rs  error.rs  frame.rs  icc.rs  image.rs  jpeg.rs  lib.rs  util.rs  var_dct.rs
jxl/src/api/: color.rs  data_types.rs  decoder.rs  frame_info.rs  frame_scan.rs  gain_map.rs  inner.rs  input.rs  limits.rs  mod.rs  options.rs  output.rs  signature.rs  simple.rs  test.rs
jxl/src/api/inner/: box_parser.rs  codestream_parser.rs  mod.rs  process.rs
jxl/src/api/inner/codestream_parser/: mod.rs  non_section.rs  (+1 more)
jxl/src/color/: tf.rs
jxl/src/container/: box_header.rs  frame_index.rs  mod.rs  parse.rs
jxl/src/enc/: mod.rs  numpy.rs  png.rs
jxl/src/entropy_coding/: ans.rs  context_map.rs  decode.rs  huffman.rs  hybrid_uint.rs  lz77.rs  mod.rs  owned_histograms.rs
jxl/src/features/: blending.rs  epf.rs  mod.rs  noise.rs  patches.rs  spline.rs
jxl/src/frame/: adaptive_lf_smoothing.rs  block_context_map.rs  coeff_order.rs  color_correlation_map.rs  decode.rs  group.rs  group_cache.rs  hf_strategy.rs  lf_preview.rs  mod.rs  modular.rs  quant_weights.rs  quantizer.rs  render.rs  transform_map.rs
jxl/src/frame/modular/: borrowed_buffers.rs  buffers.rs  decode.rs  flat_tree.rs  mod.rs  predict.rs  sample.rs  transforms.rs  tree.rs
jxl/src/headers/: bit_depth.rs  color_encoding.rs  encodings.rs  extra_channels.rs  frame_header.rs  image_metadata.rs  mod.rs  modular.rs  permutation.rs  size.rs  toc.rs  transform_data.rs
jxl/src/icc/: header.rs  mod.rs  stream.rs  tag.rs
jxl/src/image/: data_type.rs  internal.rs  output_buffer.rs  raw.rs  rect.rs  test.rs  typed.rs
jxl/src/render/: builder.rs  channels.rs  internal.rs  mod.rs  save.rs  simd_utils.rs  simple_pipeline.rs  test.rs
jxl/src/render/low_memory_pipeline/: group_scheduler.rs  helpers.rs  mod.rs  render_group.rs  row_buffers.rs  run_stage.rs  save.rs  stage.rs
jxl/src/render/simple_pipeline/: extend.rs  mod.rs  run_stage.rs  save.rs
jxl/src/render/stages/: apply_transfer.rs  blending.rs  chroma_upsample.rs  cms.rs  convert.rs  epf.rs  extend.rs  from_linear.rs  gaborish.rs  mod.rs  nearest_neighbor.rs  noise.rs  patches.rs  premultiply_alpha.rs  save.rs  splines.rs  spot.rs  to_linear.rs  upsample.rs  upsample2.rs  xyb.rs  ycbcr.rs
jxl/src/simd/: mod.rs  scalar.rs
jxl/src/simd/x86_64/: avx.rs  avx512.rs  mod.rs
jxl/src/tests/: api.rs  compare_incremental.rs  conformance.rs  decode.rs  macros.rs  mod.rs
jxl/src/util/: bits.rs  cacheline.rs  concat_slice.rs  fast_math.rs  file_helpers.rs  linalg.rs  mod.rs  ndarray.rs  rational_poly.rs  smallvec.rs  stack_vec.rs  test.rs  vec_helpers.rs  xorshift128plus.rs
jxl/src/util/atomic_refcell/: internal.rs  mod.rs
jxl/src/util/test/: mod.rs
jxl/src/var_dct/: dct.rs  dct_scales.rs  dct_slow.rs  transform.rs
jxl/testdata/: gain_map_sample.jxl
jxl/tests/: alpha_boundary.rs  decode.rs  gain_map_parsing.rs
jxl/tests/testdata/: ooo_jxlp_with_trailing_bytes.jxl  zero_length_skippable_box.jxl
jxl_cli/: Cargo.toml  build.rs
jxl_cli/benches/: decode.rs
jxl_cli/src/: cms.rs  lib.rs  main.rs  metadata.rs
jxl_cli/src/dec/: mod.rs
jxl_cli/src/enc/: exr.rs  mod.rs  numpy.rs  png.rs  pnm.rs
jxl_cms/: Cargo.toml
jxl_cms/src/: lcms2.rs  lib.rs
jxl_headers_derive/: Cargo.toml
jxl_headers_derive/src/: lib.rs
jxl_macros/: Cargo.toml
jxl_macros/src/: lib.rs
jxl_transforms/: Cargo.toml  gen_idct.py  gen_idct2d.py  implementation_details.md
jxl_transforms/benches/: dct.rs
jxl_transforms/src/: dct.rs  idct128.rs  idct256.rs  idct2d.rs  idct64.rs  lib.rs  scales.rs  tests.rs  transform.rs
jxl_wasm/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  build.sh  polyfill-demo.html  polyfill.js
jxl_wasm/demo/: README.md  index.html  polyfill-demo.html  polyfill.js
jxl_wasm/src/: lib.rs
(+86 files in other folders)
