[package]
name = "jxl"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
byteorder = "1.4.3"
num-derive = "0.3"
num-traits = "0.2.14"
array-init = "2.0.0"
half = "1.7.1"
jxl_headers_derive = { version = "=0.1.0", path = "jxl_headers_derive" }

[profile.release]
debug = true

[workspace]
members = ["jxl_headers_derive"]

[features]
tex = ["jxl_headers_derive/tex"]
