[profile.release]
debug = true
lto = "thin"
panic = "abort"
overflow-checks = false

[profile.bench]
debug = true

[workspace]
members = ["jxl", "jxl_cli", "jxl_cms", "jxl_macros", "jxl_simd", "jxl_transforms"]
resolver = "2"

[workspace.lints.clippy]
missing_safety_doc = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
