[package]
name = "jxl"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
byteorder = "1.4.3"
num-derive = "0.4"
num-traits = "0.2.14"
array-init = "2.0.0"
half = "2.4.1"
tracing = { version = "0.1.40", optional = true }
jxl_macros = { path = "../jxl_macros" }

[dev-dependencies]
arbtest = "0.3.1"
rand = "0.8.5"
rand_xorshift = "0.3.0"
test-log = { version = "0.2.16", features = ["trace"] }

[features]
debug_tools = []

[lints]
workspace = true
