[package]
name = "jxl"
description = "High performance Rust implementation of a JPEG XL decoder"
version = "0.1.1"
readme = "../README.md"
keywords = ["jpeg-xl", "decoder"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>"]
repository = "https://github.com/libjxl/jxl-rs"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
thiserror = "2.0"
byteorder = "1.4.3"
num-derive = "0.4"
num-traits = "0.2.14"
array-init = "2.0.0"
half = "2.4.1"
tracing = { version = "0.1.40", optional = true }
jxl_macros = { path = "../jxl_macros", version = "=0.1.1" }
jxl_simd = { path = "../jxl_simd", version = "=0.1.1" }

[dev-dependencies]
arbtest = "0.3.2"
paste = "1.0.15"
rand = "0.8.5"
rand_xorshift = "0.3.0"
test-log = { version = "0.2.16", features = ["trace"] }
jxl_macros = { path = "../jxl_macros", version = "=0.1.1", features = ["test"] }
criterion = { version = "0.5", features = ["html_reports"] }

[lints]
workspace = true

[[bench]]
name = "dct"
harness = false
