[package]
name = "jxl_cli"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
jxl = { path = "../jxl" }
clap = { version = "4.5.18", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features=["env-filter"], optional = true }
lcms2 = "6.1.0"
half = "2.4.1"
png = "0.17.16"

[dev-dependencies]
jxl_macros = { path = "../jxl_macros" }

[features]
tracing-subscriber = ["dep:tracing-subscriber", "jxl/tracing"]

[lints]
workspace = true
