[package]
name = "jxl_cli"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
default-run = "jxl_cli"

[dependencies]
jxl = { path = "../jxl" }
clap = { version = "4.5.18", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features=["env-filter"], optional = true }
lcms2 = "6.1.0"
half = "2.4.1"
png = "0.17.16"
exr = { version = "1.73.0", optional = true }
color-eyre = "0.6.5"

[dev-dependencies]
jxl_macros = { path = "../jxl_macros", features = ["test"] }

[features]
tracing-subscriber = ["dep:tracing-subscriber", "jxl/tracing"]
exr = ["dep:exr"]
default = ["exr", "all-simd"]

all-simd = ["jxl/all-simd"]
sse42 = ["jxl/sse42"]
avx = ["jxl/avx"]
avx512 = ["jxl/avx512"]
neon = ["jxl/neon"]

[lints]
workspace = true
