[package]
name = "jxl_cms"
description = "High performance Rust implementation of a JPEG XL decoder - CMS integration library"
version = "0.4.1"
readme = "../README.md"
keywords = ["jpeg-xl", "decoder"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>"]
repository = "https://github.com/libjxl/jxl-rs"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
jxl = { path = "../jxl", version = "=0.4.1" }
lcms2 = { version = "6.1.0", features = ["static"] }
bytemuck = "1.24.0"

[lints]
workspace = true
