[package]
name = "jxl_headers_derive"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
tex = []

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "1.0.45", features = ["extra-traits", "full"] }
