[package]
name = "jxl_macros"
version = "0.1.0"
authors = ["Luca Versari <veluca93@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0.90", features = ["extra-traits", "full"] }

[lints]
workspace = true
