[package]
name = "jxl_transforms"
description = "High performance Rust implementation of a JPEG XL decoder - Transforms"
version = "0.1.0"
readme = "../README.md"
keywords = ["jpeg-xl", "simd", "dct"]
categories = ["multimedia::images"]
authors = ["Luca Versari <veluca93@gmail.com>"]
repository = "https://github.com/libjxl/jxl-rs"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
jxl_simd = { path = "../jxl_simd" }
num-traits = "0.2.18"
rand = "0.9.2"
rand_chacha = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
test-log = "0.2.14"
paste = "1.0.15"

[[bench]]
name = "dct"
harness = false

[lints]
workspace = true
