[package]
name = "jxl_wasm"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jxl = { path = "../jxl", version = "0.1.2", default-features = false }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
png = "0.18.0"
byteorder = "1.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[profile.release]
# Optimize for size in release builds
opt-level = "s"
lto = true

[lints]
workspace = true
